burada fork programini ögrenmek icin degisiklik yaptim git commit

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <script src="index.js"></script>
 <h2>The Full Stack Web Development</h2>
 <br>
+<h2>burada fork programini ögrenmek icin degisiklik yaptim.</h2>
 ​<p>
   The Full Stack Web Development program we offer can lead any beginner 
   through the process, or take intermediate to advanced-level professionals
