bu commit ile takim oluyoruz

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <h2>The Full Stack Web Development</h2>
 <br>
 <h2>burada fork programini ögrenmek icin degisiklik yaptim.</h2>
+<h2>Burada da takim halinde nasil calisilir onu ögreniyorum.</h2>
 ​<p>
   The Full Stack Web Development program we offer can lead any beginner 
   through the process, or take intermediate to advanced-level professionals
