--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <br>
 <h2>burada fork programini ögrenmek icin degisiklik yaptim.</h2>
 <h2>Burada da takim halinde nasil calisilir onu ögreniyorum.</h2>
+<h2>BURADA LIVE SHARE ILE REMOTE OLARAK VS CODE DA CODE YAZIYORUM.</h2>
 ​<p>
   The Full Stack Web Development program we offer can lead any beginner 
   through the process, or take intermediate to advanced-level professionals
